--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
             </div>
         </div>
     </nav>
-
-    <!-- Hero Section -->
-    <section class="hero-section">
-        <div class="container">
-            <div class="hero-content">
+<!-- Hero Section -->
+<section class="hero-section">
+    <div class="container">
+        <div class="hero-content d-flex align-items-center flex-wrap">
+            <img src="images/ryan-palmer.jpg" alt="Ryan Palmer" class="img-fluid rounded-circle me-4 mb-3" style="width: 150px; height: 150px; object-fit: cover; border: 3px solid #212529;">
+            <div>
                 <h1 class="hero-title">Ryan Palmer</h1>
                 <p class="hero-subtitle">BYU Finance Student | Real Estate + AI Enthusiast</p>
                 <div class="d-flex gap-3">
@@ -80,7 +81,8 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Content Section -->
     <section class="py-5">
