--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <section class="hero-section">
     <div class="container">
         <div class="hero-content d-flex align-items-center flex-wrap">
-            <img src="images/ryan-palmer.jpg" alt="Ryan Palmer" class="img-fluid rounded-circle me-4 mb-3" style="width: 150px; height: 150px; object-fit: cover; border: 3px solid #212529;">
+            <img src="ryan-palmer.jpg" alt="Ryan Palmer" class="img-fluid rounded-circle me-4 mb-3" style="width: 150px; height: 150px; object-fit: cover; border: 3px solid #212529;">
             <div>
                 <h1 class="hero-title">Ryan Palmer</h1>
                 <p class="hero-subtitle">BYU Finance Student | Real Estate + AI Enthusiast</p>
