--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <section class="hero-section">
     <div class="container">
         <div class="hero-content d-flex align-items-center flex-wrap">
-<img src="images/ryan-palmer.jpg" alt="Ryan Palmer" 
+<img src="/ryan-palmer.jpg" alt="Ryan Palmer" 
      class="img-fluid rounded-circle me-4 mb-3" 
      style="width: 220px; height: 220px; object-fit: cover; border: 4px solid #212529;">
             <div>
