--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="resume.html">Résumé</a>
                     </li>
+                    
                     <li class="nav-item">
-                        <a class="nav-link" href="scratch.html">Scratch</a>
+                        <a class="nav-link" href="scratch.html">Giants Baseball</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
