--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                         <a class="nav-link" href="resume.html">Résumé</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="scratch.html">Scratch</a>
+                        <a class="nav-link" href="scratch.html">Giants Baseball</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="about.html">About</a>
