--- a/resume.html
+++ b/resume.html
@@ -68,7 +68,7 @@
                         <a class="nav-link active" aria-current="page" href="resume.html">Résumé</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="scratch.html">Scratch</a>
+                        <a class="nav-link" href="scratch.html">Giants Baseball</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
