--- a/scratch.html
+++ b/scratch.html
@@ -16,7 +16,7 @@
     </header>
 
     <div class="main-content">
-        <img src="images/giants_logo.png" alt="San Francisco Giants Logo" class="team-logo">
+        <img src="giants_logo.png" alt="San Francisco Giants Logo" class="team-logo">
         
         <h2>About the Giants</h2>
         <p>The San Francisco Giants are an American professional baseball team based in San Francisco. The Giants compete in Major League Baseball (MLB) as a member club of the National League (NL) West division. Founded in 1883 as the New York Gothams, and renamed three years later the New York Giants, the team eventually moved to San Francisco in 1958.</p>
