--- a/about.html
+++ b/about.html
@@ -163,6 +163,12 @@
                 <div class="col-md-6 text-md-end">
                     <p>IS 201 Final Project</p>
                     <p>Brigham Young University</p>
+                    <hr class="my-3">
+                    <p class="mb-0">
+                        <a href="https://www.linkedin.com/in/ryanpalmerr" target="_blank" style="color: #0a66c2; font-weight: bold; text-decoration: none;">
+                            Connect with me on LinkedIn
+                            </a>
+                        </p>
                 </div>
             </div>
         </div>
