--- a/scratch.html
+++ b/scratch.html
@@ -107,36 +107,40 @@
 
     <div class="tableau-section">
         <h2>Where MLB Players Come From</h2>
-        <div class='tableauPlaceholder' id='viz1682345678901' style='position: relative'>
-            <noscript>
-                <a href='#'>
-                    <img alt='MLB Players by Country of Origin' src='https://public.tableau.com/static/images/ML/MLBPlayersbycountry/MLBPlayersbycountry/1_rss.png' style='border: none' />
-                </a>
-            </noscript>
-            <object class='tableauViz' style='display:none;'>
-                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-                <param name='embed_code_version' value='3' />
-                <param name='site_root' value='' />
-                <param name='name' value='MLBPlayersbycountry/MLBPlayersbycountry' />
-                <param name='tabs' value='no' />
-                <param name='toolbar' value='yes' />
-                <param name='static_image' value='https://public.tableau.com/static/images/ML/MLBPlayersbycountry/MLBPlayersbycountry/1.png' />
-                <param name='animate_transition' value='yes' />
-                <param name='display_static_image' value='yes' />
-                <param name='display_spinner' value='yes' />
-                <param name='display_overlay' value='yes' />
-                <param name='display_count' value='yes' />
-                <param name='language' value='en-US' />
-            </object>
-        </div>
-        <script type='text/javascript'>
-            var divElement = document.getElementById('viz1682345678901');
-            var vizElement = divElement.getElementsByTagName('object')[0];
-            vizElement.style.width='100%';
-            vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
-            var scriptElement = document.createElement('script');
-            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);
+
+<div class='tableauPlaceholder' id='viz1745429972450' style='width: 100%; height: 600px; position: relative;'>
+    <noscript>
+        <a href='#'>
+            <img alt='Sheet 1' 
+                 src='https://public.tableau.com/static/images/39/39DPFZ7BT/1_rss.png' 
+                 style='border: none; width: 100%; max-width: 800px; display: block; margin: 0 auto;' />
+        </a>
+    </noscript>
+    <object class='tableauViz' style='display: none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='path' value='shared/39DPFZ7BT' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image' value='https://public.tableau.com/static/images/39/39DPFZ7BT/1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+    </object>
+</div>
+
+<script type='text/javascript'>
+    var divElement = document.getElementById('viz1745429972450');
+    var vizElement = divElement.getElementsByTagName('object')[0];
+    vizElement.style.width = '100%';
+    vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+    var scriptElement = document.createElement('script');
+    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+    vizElement.parentNode.insertBefore(scriptElement, vizElement);
+</script>
+
         </script>
     </div>
 
